# traffiser

./: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool  main  try_navigation  ultimate_main
autom4te.cache/: output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.4  traces.5
lib/libnids-1.24/: config.status
lib/libnids-1.24/samples/: Makefile
lib/libnids-1.24/src/: Makefile
src/: Makefile  Makefile.am  Makefile.in  connection_manager.cpp  connection_manager.h  main.cpp  traffiser  utilities.cpp  utilities.h
src/.deps/: connection_manager.Po  main.Po
try/: connection_manager.cpp  connection_manager.h  main  main.cpp  output.txt  try_navigation.cpp  ultimate_main.cpp
